manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infraregistry
  labels:
    gateway-external-access: "true"
